# scChromHMM

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
example/: README.md  h3k4me1_fragments.tsv.gz.tbi  k4me1.txt  model_2.txt
src/: config.rs  fragment.rs  hmm.rs  lib.rs  main.rs  model.rs  quantify.rs  record.rs  spatial.rs  transform.rs
src-R/: parse.cpp
test/: cells.txt  h3k27ac_fragments.tsv.gz.tbi  h3k27me3_fragments.tsv.gz.tbi  k27ac.txt  k27me3.txt  model_12_v2.txt
